# sorobonto-backend

./: README.md  dev_launch.sh  pyproject.toml
sorobonto/: manage.py
sorobonto/apps/blog_management/: apps.py
sorobonto/sorobonto/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
